# ShaderDock

./: .gitattributes  Build.md  CMakeLists.txt  README.md
assets/: test_triangle.frag  test_triangle.vert
assets/demos/Bricks_Game/: buffer_a.glsl  demo.json  image.glsl
assets/demos/Chinese_Go/: buffer_a.glsl  demo.json  image.glsl
assets/demos/Cube_lines/: demo.json
assets/demos/Dry_Rocky_Gorge/: demo.json  image.glsl  resource_urls.txt
assets/demos/Halloween_Radiosity/: buffer_c.glsl  demo.json
assets/demos/Happy_Jumping/: demo.json  image.glsl
assets/demos/Happy_Moomin_v2/: buffer_a.glsl  buffer_b.glsl  buffer_c.glsl  common.glsl  demo.json  image.glsl  resource_urls.txt
assets/demos/Image_Based_PBR_Material/: buffer_a.glsl  buffer_b.glsl  demo.json  resource_urls.txt
assets/demos/Rainforest/: buffer_a.glsl  demo.json
assets/demos/SH16C_Tron/: buf_a.glsl  buf_b.glsl  buf_c.glsl  demo.json  image.glsl
assets/demos/SH16C_Voxel_Game/: buf_b.glsl  buf_c.glsl  demo.json  image.glsl  resource_urls.txt
assets/demos/Texture_LOD/: demo.json  image.glsl  resource_urls.txt
docs/: Architecture.md  Build.md  DevelopmentPlan.md
scripts/: parse_shadertoy.py
src/: gl_bindings.hpp  main.c  main.cpp
src/app/: AppConfig.cpp  AppConfig.hpp  ShaderDockApp.cpp  ShaderDockApp.hpp  ShaderDockApp_Input.cpp  ShaderDockApp_Render.cpp  ShaderDockApp_Startup.cpp  main.cpp
src/bindings/: BufferInputBinding.cpp  BufferInputBinding.hpp  CubemapInputBinding.cpp  CubemapInputBinding.hpp  KeyboardInputBinding.cpp  KeyboardInputBinding.hpp  PassInputBinding.cpp  PassInputBinding.hpp  TextureInputBinding.cpp  TextureInputBinding.hpp
src/bindings/providers/: BufferInputProvider.cpp  BufferInputProvider.hpp  CubemapInputProvider.cpp  CubemapInputProvider.hpp  InputProvider.hpp  KeyboardInputProvider.cpp  KeyboardInputProvider.hpp  TextureInputProvider.cpp  TextureInputProvider.hpp
src/manifest/: DemoManifestLoader.cpp  DemoManifestLoader.hpp  ManifestTypes.cpp  ManifestTypes.hpp
src/render/: FullscreenTriangle.cpp  FullscreenTriangle.hpp  GlLoader.cpp  GlLoader.hpp  PassGraph.cpp  PassGraph.hpp  PassInstance.cpp  PassInstance.hpp  PipelineTypes.cpp  PipelineTypes.hpp  RenderPipeline.cpp  RenderPipeline.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/resources/: AssetIO.cpp  AssetIO.hpp  DemoCatalog.cpp  DemoCatalog.hpp  DemoManifest.cpp  DemoManifest.hpp  TextureFactory.cpp  TextureFactory.hpp  TextureLoader.cpp  TextureLoader.hpp
